fix(bug): Fixed comparison bug found by sonarcloud in unrelated PR (#9482)
* fix(bug): Fixed comparison bug found by sonarcloud in unrelated PR

* fix(bug): Implemented comments from review